greeter/manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      imagePullSecrets:
      - name: gcp-artifact-registry
      containers:
        - name: greeter
          image: docker.io/iku1/greeter:5.3.0
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 60
            httpGet:
              path: /
              port: 5008
